--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@ng-icons/core": "^28.1.0",
+    "@ng-icons/font-awesome": "^28.1.0",
     "@ng-icons/heroicons": "^28.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
